--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.9.0",
+    "element-plus": "^2.10.1",
     "js-mdict": "^6.0.8",
     "lodash": "^4.17.21",
+    "pinia": "^3.0.3",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
