--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "types": [
-      "utools-api-types"
-    ]
+    "types": ["utools-api-types"]
   },
-  "include": [
-    "src/**/*.vue",
-    "src/**/*.js"
-  ]
+  "include": ["src/**/*.vue", "src/**/*.js"]
 }
