--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.9.0",
     "element-plus": "^2.10.1",
-    "js-mdict": "^6.0.8",
     "lodash": "^4.17.21",
     "pinia": "^3.0.3",
     "uuid": "^11.1.0",
@@ -17,6 +15,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "utools-api-types": "^6.1.0",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "js-mdict": "^6.0.8",
+    "axios": "^1.9.0"
   }
 }
