--- a/package.json
+++ b/package.json
@@ -13,10 +13,25 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "utools-api-types": "^6.1.0",
-    "vite": "^6.0.11",
+    "@eslint/js": "^9.29.0",
+    "@types/node": "^24.0.3",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-standard": "^9.0.1",
+    "@vue/runtime-core": "^3.5.17",
+    "axios": "^1.9.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-vue": "^10.2.0",
+    "globals": "^16.2.0",
     "js-mdict": "^6.0.8",
-    "axios": "^1.9.0"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.7.0",
+    "utools-api-types": "^6.1.0",
+    "vite": "^6.0.11"
   }
 }
