--- a/public/package.json
+++ b/public/package.json
@@ -1,7 +1,17 @@
 {
   "type": "commonjs",
+  "scripts": {
+    "postinstall": "patch-package"
+  },
   "dependencies": {
+    "@msgpack/msgpack": "^3.1.2",
     "axios": "^1.9.0",
+    "cpp_persistent_trie": "github:ThXrimson/cpp_persistent_trie",
+    "flatbuffers": "^25.2.10",
     "js-mdict": "^6.0.8"
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   }
 }
